--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.6",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
     "sockjs-client": "^1.6.1"
