--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.6",
@@ -25,10 +27,12 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/node": "^22.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.20",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
