--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@stomp/stompjs": "^7.0.0",
+    "@types/jquery": "^3.5.33",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.6",
