--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-confetti": "^6.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.17.0",
     "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
