--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "@stomp/stompjs": "^7.0.0",
     "@types/jquery": "^3.5.33",
     "axios": "^1.7.7",
@@ -26,7 +30,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.17.0",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "path": "0.12.7",
+    "next": "16.0.1",
+    "lucide-react": "0.552.0",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
@@ -37,6 +46,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.20",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "tailwindcss": "4.1.17",
+    "postcss": "8.5.6"
   }
 }
